This is the first assignment.

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,20 +1,139 @@
-# Reproducible Research: Peer Assessment 1
+
+Reproducible Research Assignment 1
+==================================
+
+1. Loading library and data set and preprocessing the data
+```{r}
+library(ggplot2)
+library(scales)
+library(lattice)
+data <- read.csv("activity.csv")
+names(data)
+str(data)
+```
+
+Keep the original data as "data", then make a copy, as "data1"
+```{r}
+data1 <- data
+```
+
+Calculte the total number of steps taken per day.
+For this part of the work, ignore the missing values in the dataset.
+```{r}
+sumofsteps <- aggregate(data$steps, by=list(data$date), FUN=sum)
+```
+
+Make a histogram of the total number of steps taken each day
+```{r fig.width = 10}
+sumofsteps$days <- as.Date(sumofsteps$Group.1, format="%Y-%m-%d")
+sumofsteps$Sum_of_steps_perday <- sumofsteps$x
+ggplot(sumofsteps, aes(x=days, y=Sum_of_steps_perday)) + geom_bar(stat="identity")
+```
 
 
-## Loading and preprocessing the data
+Calculate and report the mean and median total number of steps taken per day
+```{r}
+meanofsteps <- aggregate(data$steps, by=list(data$date), FUN=mean)
+meanofsteps
+medianofsteps <- aggregate(data$steps, by=list(data$date), FUN=median)
+medianofsteps
+```
 
 
+What is the average daily activity pattern?
 
-## What is mean total number of steps taken per day?
+Make a time series plot (type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r fig.width = 10}
+data$date <- as.Date(data$date)
+data$time <- paste(data$interval%/%100,data$interval%%100, "00", sep=":")
+data$DateTime <- paste(data$date, data$time)
+data$DateTime <- as.POSIXlt(data$DateTime)
+plot(data$DateTime, data$steps, type = "l", xlab = "Days", ylab = "Number of steps")
+```
 
 
+Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+The result shows that row 16492 contains the maxinum number of steps (806).
+```{r}
+for(i in 1:nrow(data)){
+    if(is.na(data$steps[i])){
+        data$steps[i] = 0
+    }
+}
+for(j in 1:nrow(data)){
+    if(data$steps[j] == max(data$steps)){
+        print(data[j,])
+    }
+}
 
-## What is the average daily activity pattern?
+```
 
 
+Imputing missing values
+Check for the missing value in the columns, "steps", "date" and "iterval"
+```{r}
+nrow(data)
+length(data$steps[!is.na(data$steps)])
+length(data$date[!is.na(data$date)])
+length(data$interval[!is.na(data$interval)])
+```
 
-## Imputing missing values
+It is clear that only the column "steps" has missing value.
+Calculate the total number of rows with NAs
+```{r}
+length(data$date[!is.na(data$date)]) - length(data$steps[!is.na(data$steps)])
+```
+
+Because the median of everyday steps is 0, the strategy is filling in all the NA with 0.
+Create a new dataset ("data1") that is equal to the original dataset but with the missing data filled in.
+
+```{r}
+head(data1)
+for(i in 1:nrow(data1)){
+    if(is.na(data1$steps[i])){
+        data1$steps[i] = 0
+    }
+}
+head(data1)
+```
+
+Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. 
+```{r fig.width = 10}
+sumofsteps1 <- aggregate(data1$steps, by=list(data1$date), FUN=sum)
+sumofsteps1$days <- as.Date(sumofsteps1$Group.1, format="%Y-%m-%d")
+sumofsteps1$Sum_of_steps_perday <- sumofsteps1$x
+ggplot(sumofsteps1, aes(x=days, y=Sum_of_steps_perday)) + geom_bar(stat="identity")
+
+meanofsteps1 <- aggregate(data1$steps, by=list(data1$date), FUN=mean)
+meanofsteps1
+medianofsteps1 <- aggregate(data1$steps, by=list(data1$date), FUN=median)
+medianofsteps1
+```
+
+Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+It looks like there are no big different, and the reason is that the analysis is using 0 for replacing NA.
+
+We will check whether there are differences in activity patterns between weekdays and weekends
+
+Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+```{r}
+data1$date <- as.Date(data$date)
+days <- !(weekdays(data$date) %in% c('Saturday','Sunday'))
+data1$day <- days
+for(i in 1:nrow(data1)){
+    if(data1$day[i]){
+        data1$weekdays[i] = "weekdays"
+    }
+    else{
+        data1$weekdays[i] = "weekend"
+    }
+}
+```
 
 
+Make a panel plot containing a time series plot of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). 
+```{r fig.width = 10}
+xyplot( steps ~ interval | weekdays, type = "l", data = data1, ylab = "Number of Steps", layout = c(1,2))
+```
 
-## Are there differences in activity patterns between weekdays and weekends?
