This is for the assignment 1.

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -25,18 +25,16 @@ sumofsteps <- aggregate(data$steps, by=list(data$date), FUN=sum)
 
 Make a histogram of the total number of steps taken each day
 ```{r fig.width = 10}
-sumofsteps$days <- as.Date(sumofsteps$Group.1, format="%Y-%m-%d")
-sumofsteps$Sum_of_steps_perday <- sumofsteps$x
-ggplot(sumofsteps, aes(x=days, y=Sum_of_steps_perday)) + geom_bar(stat="identity")
+hist(sumofsteps$x, breaks = 10)
 ```
 
 
 Calculate and report the mean and median total number of steps taken per day
 ```{r}
-meanofsteps <- aggregate(data$steps, by=list(data$date), FUN=mean)
-meanofsteps
-medianofsteps <- aggregate(data$steps, by=list(data$date), FUN=median)
-medianofsteps
+mean(sumofsteps$x)
+mean(sumofsteps$x, na.rm = TRUE)
+median(sumofsteps$x)
+median(sumofsteps$x, na.rm = TRUE)
 ```
 
 
@@ -100,19 +98,15 @@ head(data1)
 Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. 
 ```{r fig.width = 10}
 sumofsteps1 <- aggregate(data1$steps, by=list(data1$date), FUN=sum)
-sumofsteps1$days <- as.Date(sumofsteps1$Group.1, format="%Y-%m-%d")
-sumofsteps1$Sum_of_steps_perday <- sumofsteps1$x
-ggplot(sumofsteps1, aes(x=days, y=Sum_of_steps_perday)) + geom_bar(stat="identity")
+hist(sumofsteps1$x, breaks = 10)
 
-meanofsteps1 <- aggregate(data1$steps, by=list(data1$date), FUN=mean)
-meanofsteps1
-medianofsteps1 <- aggregate(data1$steps, by=list(data1$date), FUN=median)
-medianofsteps1
+mean(sumofsteps1$x)
+median(sumofsteps1$x)
 ```
 
 Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
 
-It looks like there are no big different, and the reason is that the analysis is using 0 for replacing NA.
+There are some different between the two histogram, and the mean and median are different too.
 
 We will check whether there are differences in activity patterns between weekdays and weekends
 
