Here are for the assignment 1.

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -2,7 +2,7 @@
 Reproducible Research Assignment 1
 ==================================
 
-1. Loading library and data set and preprocessing the data
+Loading library and data set and preprocessing the data
 ```{r}
 library(ggplot2)
 library(scales)
@@ -49,6 +49,20 @@ data$DateTime <- as.POSIXlt(data$DateTime)
 plot(data$DateTime, data$steps, type = "l", xlab = "Days", ylab = "Number of steps")
 ```
 
+Imputing missing values
+Check for the missing value in the columns, "steps", "date" and "iterval"
+```{r}
+nrow(data)
+length(data$steps[!is.na(data$steps)])
+length(data$date[!is.na(data$date)])
+length(data$interval[!is.na(data$interval)])
+```
+
+It is clear that only the column "steps" has missing value.
+Calculate the total number of rows with NAs
+```{r}
+length(data$date[!is.na(data$date)]) - length(data$steps[!is.na(data$steps)])
+```
 
 Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
 The result shows that row 16492 contains the maxinum number of steps (806).
@@ -66,21 +80,6 @@ for(j in 1:nrow(data)){
 
 ```
 
-
-Imputing missing values
-Check for the missing value in the columns, "steps", "date" and "iterval"
-```{r}
-nrow(data)
-length(data$steps[!is.na(data$steps)])
-length(data$date[!is.na(data$date)])
-length(data$interval[!is.na(data$interval)])
-```
-
-It is clear that only the column "steps" has missing value.
-Calculate the total number of rows with NAs
-```{r}
-length(data$date[!is.na(data$date)]) - length(data$steps[!is.na(data$steps)])
-```
 
 Because the median of everyday steps is 0, the strategy is filling in all the NA with 0.
 Create a new dataset ("data1") that is equal to the original dataset but with the missing data filled in.
